--- a/data-svd.cabal
+++ b/data-svd.cabal
@@ -45,24 +45,21 @@ executable data-svd-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , bytestring
---                     , data-svd
+                     , data-svd
   default-language:    Haskell2010
 
 
--- test-suite data-svd-tests
---   type:                exitcode-stdio-1.0
---   hs-source-dirs:      test
---   main-is:             Spec.hs
---   other-modules:       --ParseSpec
---                        SpecHelper
---   build-tool-depends:
---     hspec-discover:hspec-discover
---   build-depends:       base >= 4.7 && < 5
---                      , data-svd
---                      , hspec
---                      , base16-bytestring
---   default-language:    Haskell2010
+test-suite spec
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Spec.hs
+  other-modules:       PrettyBitsSpec
+  build-tool-depends:
+    hspec-discover:hspec-discover
+  build-depends:       base >= 4.7 && < 5
+                     , data-svd
+                     , hspec
+  default-language:    Haskell2010
 
 source-repository head
   type:     git
