--- a/data-svd.cabal
+++ b/data-svd.cabal
@@ -57,10 +57,12 @@ test-suite spec
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  other-modules:       PrettyBitsSpec
+  other-modules:       DimSpec
+                       PrettyBitsSpec
   build-tool-depends:
     hspec-discover:hspec-discover
   build-depends:       base >= 4.7 && < 5
+                     , data-default-class
                      , data-svd
                      , hspec
   default-language:    Haskell2010
