--- a/data-svd.cabal
+++ b/data-svd.cabal
@@ -65,6 +65,7 @@ test-suite spec
                      , data-default-class
                      , data-svd
                      , hspec
+                     , lens
   default-language:    Haskell2010
 
 source-repository head
