--- a/data-svd.cabal
+++ b/data-svd.cabal
@@ -44,7 +44,7 @@ library
                      , text
   default-language:    Haskell2010
 
-executable data-svd-exe
+executable pretty-svd
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
