move toplevel parseSVD, parseSVDPeripherals to Data.SVD.IO

--- a/data-svd.cabal
+++ b/data-svd.cabal
@@ -26,6 +26,7 @@ library
                        Data.SVD
                        Data.SVD.Diff
                        Data.SVD.Dim
+                       Data.SVD.IO
                        Data.SVD.Lens
                        Data.SVD.Parse
                        Data.SVD.Pretty
