--- a/data-svd.cabal
+++ b/data-svd.cabal
@@ -15,6 +15,8 @@ build-type:          Simple
 extra-source-files:
     LICENSE
     README.md
+    .golden/stm32f405/golden
+    test/samples/stm32f405.svd
 
 extra-doc-files:
     CHANGELOG.md
@@ -62,12 +64,15 @@ test-suite spec
   main-is:             Spec.hs
   other-modules:       DimSpec
                        PrettyBitsSpec
+                       SamplesSpec
   build-tool-depends:
     hspec-discover:hspec-discover
   build-depends:       base >= 4.7 && < 5
-                     , data-default-class
                      , data-svd
+                     , ansi-wl-pprint
+                     , data-default-class
                      , hspec
+                     , hspec-golden
                      , lens
   default-language:    Haskell2010
 
