--- a/data-svd.cabal
+++ b/data-svd.cabal
@@ -37,7 +37,6 @@ library
                        Data.SVD.Types
                        Data.SVD.Util
   build-depends:       base >= 4.7 && < 5
-                     , ansi-wl-pprint
                      , bytestring
                      , containers
                      , cereal
@@ -48,6 +47,8 @@ library
                      , hxt
                      , hxt-xpath
                      , lens
+                     , prettyprinter
+                     , prettyprinter-ansi-terminal
                      , safe
                      , text
   default-language:    Haskell2010
@@ -71,11 +72,11 @@ test-suite spec
     hspec-discover:hspec-discover
   build-depends:       base >= 4.7 && < 5
                      , data-svd
-                     , ansi-wl-pprint
                      , data-default-class
                      , hspec
                      , hspec-golden
                      , lens
+                     , prettyprinter
   default-language:    Haskell2010
 
 source-repository head
